<resources>
    <string name="app_name">Demo Application</string>
    <string name="resgister">Resgister</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_login">Already have an account! Login</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="create_new_account_sign_up">Create new Account! Sign Up</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="Username">Username</string>
    <string name="demo_application">Demo Application</string>
    <string name="create_new_account">Create New Account</string>
    <string name="select_image_from">Select Image from:</string>
    <string name="todo">TODO</string>
    <string name="userimage">userImage</string>
    <string name="back">Back</string>
    <string name="all_users">All Users</string>
    <string name="All_Users">ALL USERS</string>
    <string name="image">Image</string>
    <string name="show_all_news">Show ALL News</string>
    <string name="show_all_users">Show All Users</string>
    <string name="failed_to_fetch_data">failed to fetch Data!</string>
    <string name="news">News</string>
    <string name="users">Users</string>
    <string name="News">News</string>
    <string name="search">Search</string>
    <string name="enter_query">Enter Query</string>
    <string name="Show_all_users">Show All Users</string>
    <string name="show_more">Show More</string>
    <string name="read_more">Read More</string>
</resources>