<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/login"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/loginText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/useremail"
                android:background="@drawable/custom_edittext"
                android:hint="@string/Email"
                android:padding="12dp"
                android:textColor="@color/black"
                android:layout_marginTop="40dp"
                android:inputType="textEmailAddress"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/userpassword"
                android:background="@drawable/custom_edittext"
                android:hint="@string/Password"
                android:padding="12dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/loginButton"
                android:text="@string/Login"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius = "20dp"
                android:textColor="#ffffff"
                android:background="@drawable/custom_edittext"/>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:visibility="gone"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/create_new_account_sign_up"
        android:textSize="16sp"
        android:textAlignment="center"
        android:linksClickable="true"
        android:textStyle="bold"
        android:autoLink="web" android:id="@+id/signupText"
        android:textColor="@color/purple"
        android:layout_marginBottom="20dp"
        android:textCursorDrawable="@color/black"/>

</LinearLayout>
