<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp">


            <TextView
                android:id="@+id/signupText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineHeight="32sp"
                android:text="@string/create_new_account"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="36sp"
                android:textStyle="bold"
                android:layout_marginBottom="12dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/imagebox"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    app:cardCornerRadius="50mm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="InOrMmUsage,MissingConstraints">

                    <ImageView
                        android:id="@+id/userimage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/user_avatar"
                        android:scaleType="fitXY" />

                </androidx.cardview.widget.CardView>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/browseButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:elevation="16dp"
                    android:backgroundTint="@color/purple"
                    android:contentDescription="@string/todo"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="@+id/imagebox"
                    app:layout_constraintEnd_toEndOf="@+id/imagebox"
                    app:shapeAppearanceOverlay="@style/circular"
                    app:srcCompat="@drawable/baseline_add_a_photo_24" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/Username"
                android:padding="12dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/useremail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/userpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/purple"
                android:text="@string/register"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:background="@drawable/custom_edittext"/>


            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:visibility="gone" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/already_have_an_account_login"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:linksClickable="true"
        android:autoLink="web" android:id="@+id/loginText"
        android:textColor="@color/purple"
        android:layout_marginBottom="20dp"/>

</LinearLayout>