<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/purple"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/queryinput"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:background="@drawable/custom_edittext2"
                android:hint="@string/enter_query"
                android:textColorHint="#ffffff"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#ffffff"
                android:text="@string/search"
                android:textColor="@color/purple"
                android:background="@drawable/custom_edittext1"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="12dp"
                android:backgroundTint="#ffffff"
                android:text="@string/logout"
                android:textColor="@color/purple"
                android:background="@drawable/custom_edittext1"
                android:textSize="14sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="25dp"
            app:cardBackgroundColor="@color/purple"
            android:layout_margin="30dp"
            app:cardCornerRadius="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/imagecard"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_marginTop="12dp"
                            app:cardCornerRadius="50mm"
                            android:visibility="gone">

                            <ImageView
                                android:id="@+id/userImage"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/user_avatar"
                                android:scaleType="fitXY"/>

                        </androidx.cardview.widget.CardView>

                        <ProgressBar
                            android:id="@+id/progressBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:indeterminateTint="#ffffff"/>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/userNameText"
                            android:textSize="28sp"
                            android:textColor="#ffffff"
                            android:textStyle="bold"
                            android:layout_marginTop="16dp"
                            android:visibility="gone"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/userEmailText"
                            android:textSize="18sp"
                            android:textColor="#ffffff"
                            android:textStyle="italic"
                            android:visibility="gone"/>


                            <Button
                                android:id="@+id/allusersbtn"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:backgroundTint="#ffffff"
                                android:text="@string/Show_all_users"
                                android:textColor="@color/purple"
                                android:background="@drawable/custom_edittext1"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:layout_marginEnd="12dp"
                                android:padding="10dp"
                                android:layout_marginTop="8dp"
                                android:visibility="gone"/>

                    </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>